--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-#para definir el puerto donde "escuchará" el servidor
-server.port=80
-
 #Para definir el formato de despliegue de fecha/hora del log en la consola
 logging.pattern.dateformat=hh:mm
 
@@ -13,7 +10,7 @@ spring.thymeleaf.cache=false
 #MySql conexion
 spring.datasource.url=jdbc:mysql://localhost:3306/techshop?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=esotilin4422
+spring.datasource.password=12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
@@ -21,3 +18,16 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.type.descriptor.sql.BasicBinder=TRACE
+
+
+
+#Definiendo información para utilizar cuenta de Correo para usuarios
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ElCorreoDefinido@gmail.com
+spring.mail.password=LaClave de 16 dígitos de gmail... la de fondo amarillo
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#nombre del servidor para enviar el correo
+servidor.http=localhost
